--- a/core/locale/en_GB/core.xml
+++ b/core/locale/en_GB/core.xml
@@ -75,4 +75,5 @@
 	<label index="headlet.about.label">About todoyu</label>
 	<label index="unknown">n/a</label>
 	<label index="loaderBox.title">Will proceed in a moment</label>
+	<label index="panelwidget.toggle">Open/Close This Widget</label>
 </labels>
