--- a/core/locale/en_GB/core.xml
+++ b/core/locale/en_GB/core.xml
@@ -33,6 +33,7 @@
 	<label index="records">Records</label>
 	<label index="components">Components</label>
 	<label index="status">Status</label>
+	<label index="locked">Locked</label>
 	<label index="what">What</label>
 	<label index="where">Where</label>
 	<label index="when">When</label>
