* added locales for default record fields  * added missing locales for task fields  * set better file name for exports (task / project)

--- a/core/locale/en_GB/core.xml
+++ b/core/locale/en_GB/core.xml
@@ -77,4 +77,7 @@
 	<label index="unknown">n/a</label>
 	<label index="loaderBox.title">Will proceed in a moment</label>
 	<label index="panelwidget.toggle">Open/Close This Widget</label>
+	<label index="date_update">Date of last update</label>
+	<label index="date_create">Creation Date</label>
+	<label index="id_user_create">Created by</label>
 </labels>
