* added export for contacts  * fixed wrong labels  * fixed sorting of csv-headers

--- a/core/locale/de_DE/core.xml
+++ b/core/locale/de_DE/core.xml
@@ -78,6 +78,6 @@
 	<label index="panelwidget.toggle">Widget öffnen/schliessen</label>
 	<label index="date_update">Zuletzt bearbeitet am</label>
 	<label index="date_create">Erstellungs Datum</label>
-	<label index="id_user_create">Erstellt von</label>
+	<label index="id_person_create">Erstellt von</label>
 	<label index="of">von</label>
 </labels>
