--- a/core/locale/en_GB/core.xml
+++ b/core/locale/en_GB/core.xml
@@ -79,6 +79,6 @@
 	<label index="panelwidget.toggle">Open/Close This Widget</label>
 	<label index="date_update">Date of last update</label>
 	<label index="date_create">Creation Date</label>
-	<label index="id_user_create">Created by</label>
+	<label index="id_person_create">Created by</label>
 	<label index="of">of</label>
 </labels>
