* added spanish (columbia) core translation * cleanup of some wrong locale formats, entries

--- a/core/locale/cs_CZ/static_territory.xml
+++ b/core/locale/cs_CZ/static_territory.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="cs_CZ">
+<labels>
 	<label index="num2.name">Afrika</label>
 	<label index="num9.name">Oceanie</label>
 	<label index="num19.name">Ameriky</label>
