--- a/core/locale/es_CO/file.xml
+++ b/core/locale/es_CO/file.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <labels>
-	<label index="download">Download</label>
-	<label index="upload">Upload</label>
+	<label index="download">Descargar</label>
+	<label index="upload">Subir</label>
 	<label index="size.gb">GB</label>
 	<label index="size.mb">MB</label>
 	<label index="size.kb">KB</label>
 	<label index="size.b">B</label>
-	<label index="filename">File Name</label>
-	<label index="filesize">File Size</label>
+	<label index="filename">Nombre archivo</label>
+	<label index="filesize">Peso archivo</label>
 </labels>
