--- a/core/locale/es_CO/locale.xml
+++ b/core/locale/es_CO/locale.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <labels>
-	<label index="ja_JP">日本語 (日本)</label>
+	<label index="es_CO">Spanish (Colombia)</label>
 </labels>
