--- a/core/locale/ja_JP/static_territory.xml
+++ b/core/locale/ja_JP/static_territory.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="ja_JP">
+<labels>
 	<label index="num2.name">アフリカ</label>
 	<label index="num9.name">オセアニア</label>
 	<label index="num19.name">アメリカ</label>
