--- a/core/locale/nl_NL/static_country.xml
+++ b/core/locale/nl_NL/static_country.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="nl_NL">
+<labels>
 	<label index="AND">Andorra</label>
 	<label index="ARE">Verenigde Arabische Emiraten</label>
 	<label index="AFG">Afghanistan</label>
