--- a/core/locale/sr_RS/static_country.xml
+++ b/core/locale/sr_RS/static_country.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="sr_RS">
+<labels>
 	<label index="AND">Андора</label>
 	<label index="ARE">Уједињени Арапски Емирати</label>
 	<label index="AFG">Афганистан</label>
