--- a/core/locale/ja_JP/static_country.xml
+++ b/core/locale/ja_JP/static_country.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="ja_JP">
+<labels>
 	<label index="AND">アンドラ</label>
 	<label index="ARE">アラブ首長国連邦</label>
 	<label index="AFG">アフガニスタン</label>
