--- a/core/locale/nl_NL/locale.xml
+++ b/core/locale/nl_NL/locale.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<labels lang="nl_NL">
+<labels>
 	<label index="nl_NL">Nederlands (Nederland)</label>
 </labels>
