* added event reminders to calendar extension * separated list view (including header) and sole detail view of event into 2 templates to reduce redundancies * cleanup of event single view templating to be reusable * extended event templating data with optional creator person data * cleanup of calendar configuration * added manager method / dwoo template for rendering full label of events * cleanup of calendar ext init, added structural block comments * changed icon in overbooking warning alert to large scale (32x32px) version *

--- a/core/locale/de_DE/core.xml
+++ b/core/locale/de_DE/core.xml
@@ -2,7 +2,9 @@
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">Ja</label>
+	<label index="ok">Ok</label>
 	<label index="no">Nein</label>
+	<label index="dismiss">Schliessen</label>
 	<label index="loading">Daten werden geladen</label>
 	<label index="expandall">Alles anzeigen</label>
 	<label index="author">Autor</label>
