* Feature: Added onchange validation of manually edited date/datetime fields * Added jsDoc method comments to core JS

--- a/core/locale/de_DE/date.xml
+++ b/core/locale/de_DE/date.xml
@@ -50,4 +50,5 @@
 	<label index="monthly">Monatlich</label>
 	<label index="yearly">Jährlich</label>
 	<label index="today">Heute</label>
+	<label index="warning.dateformat.invalid">Ungültiges Datum entdeckt (wird beim Speichern verändert).</label>
 </labels>
