--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.1.0 - not released yet
+	* Feature: Added reference to famfamfam silk icons in third party info of about popup
 	* Feature: Added onchange validation of manually edited date/datetime fields
 	* Changed: Added globally used icons (unacknowledged/acknowledged/modified/accepted/emailed) to core
 	* Feature: Added TodoyuMailManager (DB table system_log_email) for logging of various email types
@@ -25,4 +26,3 @@ core 2.0.8 - not released yet
 
 core 0.0.1 to 2.0.7 - core 2.0.7 released on 2011-01-17
 	* See release changelog in root
-
