--- a/core/locale/en_GB/dateformat.xml
+++ b/core/locale/en_GB/dateformat.xml
@@ -8,6 +8,7 @@
 	<label index="D2MshortY2">%b %d %Y</label>
 	<label index="D2Mshort">%b %d</label>
 	<label index="D2MshortTime">%b %d %H:%M</label>
+	<label index="dShort">%a</label>
 	<label index="DshortD2M2">%a %d %m</label>
 	<label index="D2MlongY4">%B %d %Y</label>
 	<label index="MlongD2">%B %d</label>
@@ -21,5 +22,6 @@
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
 	<label index="datetime">%m/%d/%y %H:%M</label>
+	<label index="dShortDatetime">%a %m/%d/%y %H:%M</label>
 	<label index="day">%d</label>
 </labels>
