--- a/core/locale/es_CO/dateformat.xml
+++ b/core/locale/es_CO/dateformat.xml
@@ -21,5 +21,6 @@
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
 	<label index="datetime">%m/%d/%y %H:%M</label>
+	<label index="dShortDatetime">%a %m/%d/%y %H:%M</label>
 	<label index="day">%d</label>
 </labels>
