--- a/core/locale/hr_HR/dateformat.xml
+++ b/core/locale/hr_HR/dateformat.xml
@@ -21,5 +21,6 @@
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
 	<label index="datetime">%d.%m.%Y %H:%M</label>
+	<label index="dShortDatetime">%a d.%m.%Y %H:%M</label>
 	<label index="day">%d.</label>
 </labels>
