--- a/core/locale/de_DE/global.xml
+++ b/core/locale/de_DE/global.xml
@@ -84,4 +84,9 @@
 	<label index="of">von</label>
 	<label index="public">Öffentlich</label>
 	<label index="notpublic">Nicht öffentlich</label>
+	<label index="log.debug">Debug Informationen</label>
+	<label index="log.notice">Hinweise</label>
+	<label index="log.error">Normale Fehler</label>
+	<label index="log.security">Sicherheitshinweise</label>
+	<label index="log.fatal">Schwere Fehler</label>
 </labels>
