--- a/core/locale/en_GB/global.xml
+++ b/core/locale/en_GB/global.xml
@@ -90,4 +90,9 @@
 	<label index="wizard.close.confirm">Are you sure to close the wizard before you have finished all steps?</label>
 	<label index="wizard.back">Back</label>
 	<label index="wizard.next">Forward</label>
+	<label index="log.debug">Debug Informations</label>
+	<label index="log.notice">Notices</label>
+	<label index="log.error">Normal Errors</label>
+	<label index="log.security">Security Issues</label>
+	<label index="log.fatal">Fatal Errors</label>
 </labels>
