--- a/core/locale/en_GB/global.xml
+++ b/core/locale/en_GB/global.xml
@@ -87,7 +87,7 @@
 	<label index="notpublic">Not Public</label>
 	<label index="wizard">Wizard</label>
 	<label index="wizard.close">Close wizard</label>
-	<label index="wizard.close.confirm">Are you sure to close the wizard before you have finished all steps?</label>
+	<label index="wizard.close.confirm">Are you sure you want to close the wizard?</label>
 	<label index="wizard.back">Back</label>
 	<label index="wizard.next">Continue</label>
 	<label index="log.debug">Debug Information</label>
