--- a/core/locale/de_DE/form.xml
+++ b/core/locale/de_DE/form.xml
@@ -15,4 +15,5 @@
 	<label index="is_preferred">Bevorzugt</label>
 	<label index="dateselector.open">Öffne Kalender um ein Datum auszuwählen</label>
 	<label index="autocompleteInfo">Dieses Feld wird automatisch vervollständigt. Fangen Sie an zu schreiben um die Vorschläge zu sehen</label>
+	<label index="legend.main">Rollendefinition</label>
 </labels>
