--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,5 +1,8 @@
 todoyu core changelog
 
+core 2.1.0 - Release Candidate
+
+
 core 2.1.0 - beta release
 	* Changed: UI: easier deselection of simple / grouped select options - only the first current value option is preselected in case there are multiple identic options
 	* Feature: Added auto-growing behavior textareas and RTE areas
